visitor + 2 solutions